[package]
name = "inboxid"
version = "0.1.0"
authors = ["Arne Keller <arne.keller@posteo.de>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = { version = "2.4.1", default-features = false }
itertools = "0.10.0"
maildir = { git = "https://github.com/FliegendeWurst/maildir.git", branch = "master", features = ["mmap"] }
mailparse = "0.13.2"
rustls-connector = "0.13.1"
ascii_table = { git = "https://gitlab.com/arnekeller/ascii-table.git", branch = "master" }
chrono = "0.4.19"
# remove when 0.24.3 is released
rusqlite = { git = "https://github.com/rusqlite/rusqlite", branch = "master", features = ["bundled"] }
rustyline = "8.0.0"
moins = { git = "https://github.com/FliegendeWurst/moins", branch = "master" }
anyhow = "1.0.40"
mailproc = { git = "https://github.com/FliegendeWurst/mailproc.git", branch = "master" }
subprocess = "0.2.6"
mime2ext = "0.1.2"
