[workspace]

members = [
    "inboxid-lib",
    "inboxid-browse",
    "inboxid-fetch",
    "inboxid-filter",
    "inboxid-list",
    "inboxid-new",
    "inboxid-overview",
    "inboxid-sync",
]

[patch.crates-io]
cursive = { git = "https://github.com/FliegendeWurst/cursive", branch = "modified-0.16" }
cursive_core = { git = "https://github.com/FliegendeWurst/cursive", branch = "modified-0.16" }

[profile.release]
overflow-checks = true # useful when debugging
