[package]
name = "inboxid-sync"
version = "0.1.0"
authors = ["Arne Keller <arne.keller@posteo.de>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = { version = "2.4.1", default-features = false }
itertools = "0.10.0"
maildir = { git = "https://github.com/FliegendeWurst/maildir.git", branch = "master", features = ["mmap"] }
mailparse = "0.13.2"
rustls-connector = "0.13.1"
ascii_table = { git = "https://gitlab.com/arnekeller/ascii-table.git", branch = "master" }
chrono = "0.4.19"
rusqlite = { version = "0.25.0", features = ["bundled"] }
rustyline = "8.0.0"
moins = { git = "https://github.com/FliegendeWurst/moins", branch = "master" }
anyhow = "1.0.40"
mailproc = { git = "https://github.com/FliegendeWurst/mailproc.git", branch = "master" }
subprocess = "0.2.6"
mime2ext = "0.1.2"
petgraph = "0.5.1"
cursive = { version = "0.16.3", default-features = false, features = ["termion-backend"] }
cursive_tree_view = { git = "https://github.com/FliegendeWurst/cursive_tree_view.git", branch = "master" }
directories-next = "2.0.0"
serde_derive = "1.0.25"
serde = "1.0.25"
toml = "0.5.8"
once_cell = "1.7.2"
parking_lot = "0.11.1"
log = "0.4.14"
html2text = "0.2.1"

inboxid-lib = { path = "../inboxid-lib" }
